--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 
 
         <!--SECCIÓN PORTAFOLIO-->
-
+        <div>
+            <h4>Hola mundo</h4>
+        </div>
     </main>
 </body>
 </html>
