--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <title>Angela Ponce</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Fustat:wght@200..800&display=swap"
-    rel="stylesheet">"
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Fustat:wght@200..800&display=swap" rel="stylesheet">"
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -47,9 +42,9 @@
 
         <!--SECCIÓN SOBRE MÍ-->
 
-        <section id="sobre-mi">
-            <div>
-                <h3>Hola! 😊</h3>
+        <section id="sobre-mi" class="section section sobre-mi">
+            <div clas>
+                <h3 class="saludo__tittle">Hola! 😊</h3>
 
                 <p>Soy Angela Ponce, diseñadora gráfica, especialista en branding y
                     en productos digitales.
@@ -65,9 +60,7 @@
 
 
         <!--SECCIÓN PORTAFOLIO-->
-        <div>
-            <h4>Hola mundo</h4>
-        </div>
+        
     </main>
 </body>
 </html>
